Fix input reading